--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     def moshiVersion = "1.13.0"
     def navigationVersion = "2.5.3"
     def daggerHiltVersion = "2.45"
+    def gsonVersion = "2.9.0"
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -63,6 +64,9 @@ dependencies {
     implementation "com.squareup.moshi:moshi:$moshiVersion"
     kapt "com.squareup.moshi:moshi-kotlin-codegen:$moshiVersion"
     implementation "com.squareup.moshi:moshi-kotlin:$moshiVersion"
+
+    //Gson
+    implementation "com.google.code.gson:gson:$gsonVersion"
 
     // Navigation Component
     implementation "androidx.navigation:navigation-fragment-ktx:$navigationVersion"
