--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,5 +75,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     testImplementation 'org.mockito:mockito-core:4.11.0'
     testImplementation 'org.mockito:mockito-inline:3.12.4'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
